--- a/contactus.html
+++ b/contactus.html
@@ -92,7 +92,62 @@
               <h3>Send us your Feedback</h3>
            </div>
             <div class="col-12 col-md-9">
-                Form goes here
+                <form>
+                    <div class="form-group row">
+                        <label for="firstname" class="col col-md-2 col-form-label">First Name:</label>
+                        <div class="col col-md">
+                            <input type="text" class="form-control" name="firstname" id="firstname" placeholder="First Name" />
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="lastname" class="col col-md-2 col-form-label">Last Name:</label>
+                        <div class="col col-md">
+                            <input class="form-control" type="text" id="lastname" name="lastname" placeholder="lastname">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="telno" class="col col-md-2 col-form-label">Contact no.</label>
+                        <div class="col col-md-3">
+                            <input type="tel" class="form-control" id="areacode" name="areacode" placeholder="Area Code"/>
+                        </div>
+                        <div class="col col-md">
+                            <input type="tel" class="form-control" id="telno" name="telno" placeholder="Phone no."/>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="emailid" class="col col-2 col-form-label">Email</label>
+                        <div class="col col-md">
+                            <input type="email" class="form-control" id="emailid" name="emailid" placeholder="Email"/>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col col-md-6 offset-md-2">
+                            <div class="form-check">
+                                <input type="checkbox" class="form-check-input" id="approve" name="approve" value=""/>
+                                <label for="approve" class="form-check-label">
+                                    <strong>May we contact you?</strong>
+                                </label>
+                            </div>
+                        </div>
+                        <div class="col-md offset-md-1">
+                            <select class="form-control">
+                                <option>Tel no.</option>
+                                <option>Email</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="feedback" class="col-form-label col-md-2">Your Feedback:</label>
+                        <div class="col col-md">
+                            <textarea class="form-control" id="feedback" name="feedback" rows="12"></textarea>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col col-md offset-md-2">
+                            <button class="btn btn-primary" type="submit">Submit</button>
+                        </div>
+                    </div>
+                </form>
             </div>
              <div class="col-12 col-md">
             </div>
