--- a/index.html
+++ b/index.html
@@ -15,32 +15,35 @@
     <title>Ristorante Con Fusion</title>
 </head>
 
-<body>
+<body data-spy="scroll" data-target="#reserve">
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
         <div class="container">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a href="#" class="navbar-brand mr-auto"><img src="img/logo.png" width="50" height="40"></a>
-        <div class="collapse navbar-collapse" id="navbar">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active"><a href="#" class="nav-link"><span class="fa fa-home fa-lg"></span> Home</a></li>
-                <li class="nav-item"><a href="./aboutus.html" class="nav-link"><span class="fa fa-info fa-lg"></span> About us</a></li>
-                <li class="nav-item"><a href="#" class="nav-link"><span class="fa fa-list fa-lg"></span> Menu</a></li>
-                <li class="nav-item"><a href="./contactus.html" class="nav-link"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
-            </ul>
-        </div>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <a href="#" class="navbar-brand mr-auto"><img src="img/logo.png" width="50" height="40"></a>
+            <div class="collapse navbar-collapse" id="navbar">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active"><a href="#" class="nav-link"><span class="fa fa-home fa-lg"></span> Home</a></li>
+                    <li class="nav-item "><a href="./aboutus.html" class="nav-link"><span class="fa fa-info fa-lg"></span> About us</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link"><span class="fa fa-list fa-lg"></span> Menu</a></li>
+                    <li class="nav-item"><a href="./contactus.html" class="nav-link"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
     <header class="row-header jumbotron">
         <div class="container row-header">
             <div class="row row-header">
-                <div class="col-12 col-sm-9">
+                <div class="col-12 col-sm-6 col-md-6">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>    
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-2 align-self-center">
                         <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm-3 align-self-center" id="reserve">
+                    <Button class="btn btn-warning btn-block"><a href="#gototable" style="color:black; text-decoration:none">Reserve Table</a></Button>
                 </div>
             </div>
         </div>
@@ -64,16 +67,17 @@
 
 
         <div class="row row-content">
-            <div class="col-12 col-sm-4 col-md-4">
+            <div class="col-12 col-sm-4 col-md-3">
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
                 <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/buffet.png" alt="Buffet">
+                    <!-- <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/buffet.png" alt="Buffet"> -->
                     <div class="media-body">
-                        <h2 class="mt-0">Weekend Grand Buffet</h2>
+                        <h2 class="mt-0">Weekend Grand Buffet<span class="badge badge-danger ml-3">New</span></h2>
                         <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
                     </div>
+                    <img class="d-flex ml-3 img-thumbnail align-self-center" src="img/buffet.png" alt="Buffet">
                 </div>
             </div>
         </div>
@@ -89,6 +93,51 @@
                         <h2 class="mt-0">Alberto Somayya</h2>
                         <h4>Executive Chef</h4>
                         <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-center row-content">
+            <div class="col-12 col-md-8" id="gototable">
+                <div class="card">
+                    <div class="card-header bg-warning text-white"><h3>Reserve Table</h3></div>
+                    <div class="card-body">
+                        <form>
+                            <div class="form-group row">
+                                <div class="col-12 col-sm-5 col-md-3"><b>Number of Guests</b></div>
+                                <div class="col col-sm col-md ">
+                                    <strong>
+                                    <input type="radio" id="1" name="seats" value="1"/>
+                                    <label for="1">1   &nbsp;</label>
+                                    <input type="radio" id="2" name="seats" value="2"/>
+                                    <label for="2">2   &nbsp;</label>
+                                    <input type="radio" id="3" name="seats" value="3"/>
+                                    <label for="3">3   &nbsp;</label>
+                                    <input type="radio" id="4" name="seats" value="4"/>
+                                    <label for="4">4   &nbsp;</label>
+                                    <input type="radio" id="5" name="seats" value="5"/>
+                                    <label for="5">5   &nbsp;</label>
+                                    <input type="radio" id="6" name="seats" value="6"/>
+                                    <label for="6">6   &nbsp;</label>
+                                    </strong>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col col-sm-4 col-md-3"><strong>Date and Time</strong></div>
+                                <div class="col-12 col-sm-4 col-md">
+                                    <input type="text" class="form-control" name="res-date" id="res-date" placeholder="Date">
+                                </div>
+                                <div class="col-12 col-sm-4 col-md">
+                                    <input type="text" class="form-control" name="res-time" id="res-time" placeholder="Time">
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-md-3"></div>
+                                <div class="col col-sm col-md">
+                                    <button class="btn btn-primary">Reserve</button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -137,7 +186,9 @@
         </div>
     </footer>
         <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
-        <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+        <script src="node_modules/jquery/dist/jquery.slim.min.js">
+            $('body').scrollspy({ target: '#navbar-example' })
+        </script>
         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
