--- a/aboutus.html
+++ b/aboutus.html
@@ -19,7 +19,8 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a href="./index.html" class="navbar-brand mr-auto">Ristorante Con Fusion</a>
+            <!-- <a href="./index.html" class="navbar-brand mr-auto">Ristorante Con Fusion</a> -->
+            <a href="#" class="navbar-brand mr-auto"><img src="img/logo.png" width="50" height="40"></a>
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item "><a href="/index.html" class="nav-link"><span class="fa fa-home fa-lg"></span> Home</a></li>
@@ -30,7 +31,7 @@
         </div>
         </div>
     </nav>
-    <header class="jumbotron">
+    <!-- <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
                 <div class="col-12 col-sm-8">
@@ -38,6 +39,22 @@
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
                 <div class="col-12 col-sm">
+                </div>
+            </div>
+        </div>
+    </header> -->
+    <header class="row-header jumbotron">
+        <div class="container row-header">
+            <div class="row row-header">
+                <div class="col-12 col-sm-6 col-md-6">
+                    <h1>Ristorante con Fusion</h1>
+                    <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
+                </div>    
+                <div class="col-12 col-sm-2 align-self-center">
+                        <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm-3 align-self-center" id="reserve">
+                    <Button class="btn btn-warning btn-block"><a href="./index.html#gototable" style="color:black; text-decoration:none">Reserve Table</a></Button>
                 </div>
             </div>
         </div>
@@ -92,18 +109,42 @@
             </div>
         </div>
         <div class="row row-content">
-            <div class="col-12 col-sm-12 col-md-12"> 
-                <h2>Corporate Leadership</h2>
-                <h3>Peter Pan <small>Chief Epicurious Officer</small></h3>
-                <p class="d-none d-sm-block">Our CEO, Peter, credits his hardworking East Asian immigrant parents who undertook the arduous journey to the shores of America with the intention of giving their children the best future. His mother's wizardy in the kitchen whipping up the tastiest dishes with whatever is available inexpensively at the supermarket, was his first inspiration to create the fusion cuisines for which <em>The Frying Pan</em> became well known. He brings his zeal for fusion cuisines to this restaurant, pioneering cross-cultural culinary connections.</p>
-                <h3>Dhanasekaran Witherspoon <small>Chief Food Officer</small></h3>
-                <p class="d-none d-sm-block">Our CFO, Danny, as he is affectionately referred to by his colleagues, comes from a long established family tradition in farming and produce. His experiences growing up on a farm in the Australian outback gave him great appreciation for varieties of food sources. As he puts it in his own words, <em>Everything that runs, wins, and everything that stays, pays!</em></p>
-                <h3>Agumbe Tang <small>Chief Taste Officer</small></h3>
-                <p class="d-none d-sm-block">Blessed with the most discerning gustatory sense, Agumbe, our CTO, personally ensures that every dish that we serve meets his exacting tastes. Our chefs dread the tongue lashing that ensues if their dish does not meet his exacting standards. He lives by his motto, <em>You click only if you survive my lick.</em></p>
-                <h3>Alberto Somayya <small>Executive Chef</small></h3>
-                <p class="d-none col-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. He says, <em>Put together the cuisines from the two craziest cultures, and you get a winning hit! Amma Mia!</em></p>
+            <div class="col-12 col-sm-12 col-md-12" id="tabs">
+                <h2>Corporate Leadership</h2> 
+                <ul class="nav nav-tabs">
+                    <li class="nav-item">
+                        <a href="#Peter" class="nav-link active" role="tab" data-toggle="tab">Peter Pan, CEO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#Dhanas" class="nav-link" role="tab" data-toggle="tab">Dhanasekaran Witherspoon, CFO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#agumbe" class="nav-link" role="tab" data-toggle="tab">Agumbe Tang, CTO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#alberto" class="nav-link" role="tab" data-toggle="tab">Alberto Somayya, Exec. Chef</a>
+                    </li>
+                </ul>
+                <div class="tab-content">
+                    <div class="tab-pane fade show active" role="tabpanel" id="Peter">
+                        <h3>Peter Pan <small>Chief Epicurious Officer</small></h3>
+                        <p class="d-none d-sm-block">Our CEO, Peter, credits his hardworking East Asian immigrant parents who undertook the arduous journey to the shores of America with the intention of giving their children the best future. His mother's wizardy in the kitchen whipping up the tastiest dishes with whatever is available inexpensively at the supermarket, was his first inspiration to create the fusion cuisines for which <em>The Frying Pan</em> became well known. He brings his zeal for fusion cuisines to this restaurant, pioneering cross-cultural culinary connections.</p>    
+                    </div>
+                    <div class="tab-pane fade" role="tabpanel" id="Dhanas">
+                        <h3>Dhanasekaran Witherspoon <small>Chief Food Officer</small></h3>
+                        <p class="d-none d-sm-block">Our CFO, Danny, as he is affectionately referred to by his colleagues, comes from a long established family tradition in farming and produce. His experiences growing up on a farm in the Australian outback gave him great appreciation for varieties of food sources. As he puts it in his own words, <em>Everything that runs, wins, and everything that stays, pays!</em></p>    
+                    </div>
+                    <div class="tab-pane fade" role="tabpanel" id="agumbe">
+                        <h3>Agumbe Tang <small>Chief Taste Officer</small></h3>
+                        <p class="d-none d-sm-block">Blessed with the most discerning gustatory sense, Agumbe, our CTO, personally ensures that every dish that we serve meets his exacting tastes. Our chefs dread the tongue lashing that ensues if their dish does not meet his exacting standards. He lives by his motto, <em>You click only if you survive my lick.</em></p>    
+                    </div>
+                    <div class="tab-pane fade" role="tabpanel" id="alberto">
+                        <h3>Alberto Somayya <small>Executive Chef</small></h3>
+                        <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. He says, <em>Put together the cuisines from the two craziest cultures, and you get a winning hit! Amma Mia!</em></p>    
+                    </div>
+                </div>
             </div>
-       </div>
+        </div>
        <div class="row row-content">
             <div class="col-12 col-sm-9">
                 <h2>Facts &amp; Figures</h2>
