--- a/contactus.html
+++ b/contactus.html
@@ -22,11 +22,11 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
+            <a href="./index.html" class="navbar-brand mr-auto"><img src="img/logo.png" width="50" height="40"></a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
                         <li class="nav-item"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About Us</a></li>
                         <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
                         <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
@@ -34,7 +34,7 @@
         </div>
     </nav>
 
-    <header class="jumbotron">
+    <!-- <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
                 <div class="col-12 col-sm-6">
@@ -45,8 +45,23 @@
                 </div>
             </div>
         </div>
+    </header> -->
+    <header class="row-header jumbotron">
+        <div class="container row-header">
+            <div class="row row-header">
+                <div class="col-12 col-sm-6 col-md-6">
+                    <h1>Ristorante con Fusion</h1>
+                    <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
+                </div>    
+                <div class="col-12 col-sm-2 align-self-center">
+                        <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm-3 align-self-center" id="reserve">
+                    <Button class="btn btn-warning btn-block"><a href="./index.html#gototable" style="color:black; text-decoration:none">Reserve Table</a></Button>
+                </div>
+            </div>
+        </div>
     </header>
-
     <div class="container">
         <div class="row">
             <ol class="col-12 breadcrumb">
