--- a/index.html
+++ b/index.html
@@ -97,8 +97,10 @@
                 </div>
             </div>
         </div>
+        <div id="gototable">
+         </div>
         <div class="row justify-content-center row-content">
-            <div class="col-12 col-md-8" id="gototable">
+            <div class="col-12 col-md-8">
                 <div class="card">
                     <div class="card-header bg-warning text-white"><h3>Reserve Table</h3></div>
                     <div class="card-body">
