--- a/index.html
+++ b/index.html
@@ -29,9 +29,48 @@
                     <li class="nav-item"><a href="#" class="nav-link"><span class="fa fa-list fa-lg"></span> Menu</a></li>
                     <li class="nav-item"><a href="./contactus.html" class="nav-link"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
+                <span class="navbar-text">
+                    <a data-toggle="modal" data-target="#loginModal" id="loginlink">
+                    <span class="fa fa-sign-in"><label for="loginlink">&nbsp;Login</label></span></a>
+                </span>
             </div>
         </div>
     </nav>
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3 class="modal-title">Login</h3>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-row">
+                            <div class="form-group col-sm-4">
+                                <input type="email" id="emailId" placeholder="Email Address"
+                                class="form-control form-control-sm mr-1"/>
+                            </div>
+                            <div class="form-group col-sm-4">
+                                <input type="password" id="password" placeholder="password"
+                                class="form-control form-control-sm mr-1"/>
+                            </div>
+                            <div class="col-sm-auto" style="border: 1px black;">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox"/>
+                                    <label for="form-check-label">Remember Me</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <button type="button" class="btn btn-secondary btn-sm btn-auto"
+                                data-dismiss="modal">Cancle</button>
+                            <button type="submit" class="btn btn-primary btn-sm ml-1">Submit</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     <header class="row-header jumbotron">
         <div class="container row-header">
             <div class="row row-header">
@@ -43,7 +82,11 @@
                         <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center" id="reserve">
-                    <Button class="btn btn-warning btn-block"><a href="#gototable" style="color:black; text-decoration:none">Reserve Table</a></Button>
+                    <Button class="btn btn-warning btn-block">
+                        <a href="#gototable" style="color:black; text-decoration:none"
+                            data-toggle="tooltip" data-html="true" 
+                            title="or contact us on<br><strong>123456789</strong>"
+                            data-placement="bottom">Reserve Table</a></Button>
                 </div>
             </div>
         </div>
@@ -190,6 +233,11 @@
         <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
         <script src="node_modules/jquery/dist/jquery.slim.min.js">
             $('body').scrollspy({ target: '#navbar-example' })
+        </script>
+        <script>
+            $(document).ready(function(){
+                $('[data-toggle="tooltip"]').tooltip();
+            })
         </script>
         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
