--- a/index.html
+++ b/index.html
@@ -93,6 +93,47 @@
     </header>
 
     <div class="container">
+        <div class="row row-content">
+            <div class="col">
+                <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                            <img class="d-block img-fluid img-thumbnail" src="img/uthappizza.png" alt="uthappizza">    
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Uthappizza<span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.22</span></h2>
+                                A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid img-thumbnail" src="img/buffet.png" alt="Buffet">
+                            <div class="carousel-caption d-none d-sm-block">
+                                <h2>Weekend Grand Buffet<span class="badge badge-danger ml-3">New</span></h2>
+                                <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-flex align-self-center img-thumbnail mr-3" src="img/alberto.png" alt="Chef Alberto">
+                            <div class="carousel-caption d-none d-sm-block">
+                                <h2>Alberto Somayya</h2>
+                                <h4>Executive Chef</h4>
+                                <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                            </div>
+                        </div>
+                    </div>
+                    <ol class="carousel-indicators">
+                        <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#mycarousel" data-slide-to="1"></li>
+                        <li data-target="#mycarousel" data-slide-to="2"></li>
+                    </ol>
+                    <a href="#mycarousel" class="carousel-control-prev" data-slide="prev" role="button">
+                        <span class="carousel-control-prev-icon"></span>
+                    </a>
+                    <a href="#mycarousel" class="carousel-control-next" data-slide="next" role="button">
+                        <span class="carousel-control-next-icon"></span>
+                    </a>
+                </div>
+            </div>
+        </div>
         <div class="row row-content align-item-centre">
             <div class="col-12 col-sm-4 order-sm-last col-md-4">
                 <h3>Our Lipsmacking Culinary Creations</h3>
